# GroupCTRL

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  rustfmt.toml
.claude/: settings.local.json
src/: action.rs  components.rs  hooks.rs  hotkeys.rs  main.rs  models.rs  open.rs  os.rs  services.rs
src/components/: app_list.rs  app_selector.rs  group_config.rs  group_list.rs  hotkey_picker.rs  list.rs  list_cell.rs  root.rs
src/components/lists/: list.rs  list_menu.rs  list_row.rs
src/components/util/: editable_text.rs  hotkey_picker.rs  listener.rs
src/hotkeys/: convert.rs  manager.rs  model.rs  picker.rs
src/models/: action.rs  config.rs  group.rs  traits.rs
src/os/: macos.rs  prelude.rs  traits.rs
src/os/macos/: app.rs  app_openable.rs  app_picker.rs  edit_actions.rs  format.rs  open.rs
src/os/windows/: app.rs  app_openable.rs  app_query.rs  format.rs  keyboard.rs  open.rs
src/os/windows/app_openable/: open_app.rs
src/os/windows/open/: open.rs  win32.rs
src/os/windows/open/win32/: api.rs  pid_to_exe.rs  windows.rs
src/services/: action.rs  action_service.rs  config.rs  config_reader.rs  config_service.rs  group.rs  group_service.rs  hotkey.rs  hotkey_service.rs
src/services/hotkey/: binder.rs  callback.rs  error.rs  record_registered.rs  sender.rs  service.rs
src/services/hotkey_service/: binder.rs
